# pharos-suite

./: # Remove BOM from App.js.txt  .gitignore  AGENTS.md  CHANGELOG.md  DIAMOND-EYES.md  EMAIL-INFRA.md  FORGING-AUDIT.md  FORGING-TIER-0-QUICKSTART.md  HEPHAISTOS.md  HERMES.md  INTEGRATION-PROGRESS.md  NEXT-STEPS.md  ORCHESTRATION.md  PHAROS-preview-status.md  PHASE-1-COMPLETE.md  PHASE-1-PLAN.md  PHASE-2-COMPLETE.md  PHASE-3-COMPLETE.md  PHASE-4-COMPLETE.md  PHASE-5-COMPLETE.md  PHASE-6-COMPLETE.md  QUEEN-KEYPORT.md  README.md  SKILL-MAP.md  THREE-AGENT-ARCHITECTURE.md  USAGE.md  design_guidelines.json  design_guidelines.md  dev.commands.ps1  dev.ps1  package-lock.json  package.json  progress.md  pyproject.toml  tall --legacy-peer-deps  test_result.md  tsconfig.json  wrangler.toml
.emergent/: summary.txt
.github/: SECRETS-SETUP.md  dependabot.yml
AurorAI/: requirements.txt
CompassAI/: backend_test.py
aurorai/: CHANGELOG.md  README.md  backend_test.py  design_guidelines.json  package-lock.json  package.json  requirements.txt  scan_and_upload.py  server.py  wrangler.toml
backend/: .env  config.py  requirements.txt  server.py
compassai/: .gitignore  CHANGELOG.md  README.md  __init__.py  audit_profile.yaml  auth_backend_test.py  backend_test.py  gitignore.txt  wrangler.toml
docs/: ASSET_MAP.md  BRAND_ASSET_INGESTION_NOTE.md  COM-AUR-specs-v3-infrafabric-implemented-2026-03-06.md  (+27 more)
pharos_integrations/: __init__.py  pyproject.toml
pharos_integrations/llm/: __init__.py  chat.py
pharos_integrations/pharos_integrations/llm/: __init__.py  chat.py
(+485 files in other folders)
